// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
<div>
  Nothing
</div>
`;

exports[`Test with message  1`] = `
<div>
  Hi Roy
</div>
`;

exports[`Test with message  2`] = `
<div>
  <label
    htmlFor={undefined}
  >
    Change THing
  </label>
  <input
    id={undefined}
    onChange={undefined}
    value="Hi Roy"
  />
</div>
`;
